<resources>
    <string name="app_name">GitHub Users</string>

    //Activity
    <string name="activity_user_details">User details</string>
    <string name="activity_movie_details">Details</string>
    <string name="activity_main">The FilmDB</string>
    <string name="activity_user_list">History</string>

    //Textview
    <string name="text_user_name">User name</string>
    <string name="text_movie_title">Title</string>
    <string name="text_movie_year">Year</string>
    <string name="text_movie_released">Released</string>
    <string name="text_movie_website">Website</string>
    <string name="text_movie_runtime">Runtime</string>
    <string name="text_movie_country">Country</string>
    <string name="text_movie_boxoffie">Box Office</string>
    <string name="text_movie_language">Language</string>
    <string name="text_movie_director">Director</string>
    <string name="text_movie_budget">Budget</string>
    <string name="text_movie_genre">Genre</string>
    <string name="text_movie_plot">Plot</string>
    <string name="text_movie_awards">Awards</string>
    <string name="text_movie_metascore">Metascore</string>
    <string name="text_movie_imdb_ratings">IMDb Ratings</string>
    <string name="text_movie_imdb_votes">IMDb Votes</string>
    <string name="text_movie_production">Production</string>
    <string name="text_movie_writters">Written by</string>
    <string name="text_movie_actors">Starring</string>
    <string name="text_movie_editors">Edited by</string>
    <string name="text_movie_musicians">Music by</string>
    <string name="text_movie_distribuion">Distributed by</string>
    <string name="text_movie_cinematographers">Cinematography by</string>
    <string name="text_movie_producers">Produced by</string>

    <string name="text_user_url">GitHub account</string>
    <string name="text_num_repos">Number of respositories</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_no_internet_connection">Ops, there is no internet connection. The
    user will be added to user cache as sonn as connection gets back!</string>

    //EditTexts
    <string name="edit_search">User name</string>
    <string name="edit_title">Title</string>

    //Buttons
    <string name="btn_search_api">Search from API</string>
    <string name="btn_search_lod">Search from LOD</string>
    <string name="btn_search_website">Search from Website</string>
    <string name="btn_search_all">Search All</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_history">See history</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">User not found!</string>
    <string name="exception_message_movie_not_found">Movie not found!</string>

    <string name="string_content_description">Non accessible view</string>
</resources>