<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapSentences"
        android:gravity="center"
        android:hint="@string/edit_title"
        />

    <Button
        android:id="@+id/btn_search_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_search"
        android:text="@string/btn_search_api"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_search_lod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_search_api"
        android:text="@string/btn_search_lod"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_search_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_search_lod"
        android:text="@string/btn_search_website"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_search_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_search_website"
        android:text="@string/btn_search_all"
        />

</RelativeLayout>
